K8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: clickncart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: allenaira/full-stack:backend

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: clickncart

spec:
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
