K8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: clickncart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: allenaira/full-stack:frontend

          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: clickncart

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080

  type: ClusterIP
  #clusterIP:
