K8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickncart-ingress
  namespace: clickncart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:

      # FRONTEND
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      # BACKEND API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
